recursion.hanoi.lessons.recursion.hanoi.HanoiBoard.scala.error
HanoiBoard:2: error: Missing closing brace `}' assumed here
def solve(src:Int, dst:Int, other:Int) {
^HanoiBoard:6: error: expected class or object definition
def solve(src:Int, dst:Int, other:Int, height:Int) {
^